# PPOIS-labs-spring-2023

./: .gitignore  .gitmodules  README.md  ppois_lab_1.py
LR1/: .gitignore  1  1lr.py  ATM.py  ATM_Operations.py  Animal.py  Animals.py  Bank.py  Card.py  Classes.py  Commander.py  Commands.py  Coordinates.py  Currency.py  Db_Utility.py  Entity.py  Field.py  FieldLoader.py  Fox.py  GameState.py  Garden.py  Gazelle.py  Graph.py  Grass.py  InputFile.py  JsonSerializationHandler.py  LABAp1.py  LivingEntities.py  Logic.py  Main.py  Make.py  Map.py  MobilePhone.py  Object.py  Objects.py  PPOIS1lab.py  PPOIS1lab.txt  PPOIS_Lab1.pyproj  Patch.py  Pests.py  (+151 more)
LR1/.gitignore/: test1.json
LR1/API/: initializer.py
LR1/Garden/: Functions.py  field.py  garden.py
LR1/LR1/: main.py
LR1/Models/: serializers.py
LR1/Plants/: abstract_plants.py  seeds.py  trees.py  vegetables.py
LR1/TrainModel/: InputFile.py  Run.py  main.py  test1.json
LR1/Views/: garden_view.txt  views.py
LR1/Weather/: weather.py
LR1/atm/: atm.py
LR1/banknote/: banknote.py
LR1/card_account/: card_account.py
LR1/cli/: cli.py
LR1/data/: data.json
LR1/entities/: Railroad.py  Storage.py
LR1/exceptions/: exceptions.py
LR1/json/: card_accounts.json  money_vault.json
LR1/lab1/: .gitignore  constants.py  main.py  sets.json  sets_and_operations.py
LR1/money_vault/: money_vault.py
LR1/plants/: basic_classes.py  fruit_trees.py  seeds.py  (+2 more)
LR2/: .gitignore  App.py  ButtonsActions.py  Controller.py  Data.json  DataBase.py  DataControl.py  Dom.py  FootbalHandlerSax.py  GUI_Lab2.ui  MainWindow.py  Model.py  PPOIS2lab.db  PPOIS_Lab2.py  PPOIS_Lab2.pyproj  Pipfile  README.MD  README.md  SAXParser.py  Start.py  Tournament.py  View.py  WebApp.py  addBookDialog.ui  add_book_dialog.py  add_product  add_student_window.py  app.py  book.py  buttonfunc.py  conf.kv  confirm_delete_window.py  controller.py  d.xml  data.json  data.py  data.xml  dataLoader.py  data_base.json  database.txt  (+81 more)
LR3/: Board.py  CrimsonMiami.pyproj  Enemies.py  Entity.py  Environment.py  Game.py  GameState.py  HelpScreen.py  HighscoreTable.db  JewelGame.py  JewelPiece.py  Leader_board.yaml  Leaderboard_Record.py  Level_yaml.yaml  Menu_Operations.py  Menu_Operations.spec  Player.py  README.md  README.txt  Readme.txt  Record.json  ScoreTable.py  Scoreboard.py  Utility.py  Wave.py  Weapons.py  arcanoid.py  ball.py  blood.py  bowl.py  brick.py  button.py  camera.py  coin.py  colors.py  config.json  config_controller.py  const.py  constants.py  core.py  (+84 more)
LR4/: .gitignore  ATM.py  App.py  AppendObjects.py  Balance.py  Classes.py  Commands.py  Controller.py  DataControl.py  FieldLoader.py  GraphFile.py  Gui4lab.kv  GuiManagerRun.py  Objects.py  PPOIS1lab.py  PPOIS1lab.txt  PPOIS1labClasses.py  PPOIS1labGUI.py  PPOIS_Lab1.pyproj  README.MD  README.md  README.txt  RailRoadFile.py  RemoveOdjects.py  SimulationEngine.py  StartSimulation.py  States.py  Test.py  Test2_save.txt  Test_save.txt  View.py  Visualizer.py  __init__.py  bank.py  base_app.py  cache.json  cacheMachine.py  card.py  cli.py  cli_app.py  (+51 more)
(+691 files in other folders)
