[tool.poetry]
name = "ppois-poetry"
version = "0.1.0"
description = ""
authors = ["ardonplay <ardonplay2@icloud.com>"]
readme = "README.md"
packages = [{include = "LR1"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.2"
np = "^1.0.2"
numpy = "^1.24.2"
tabulate = "^0.9.0"
pillow = "^9.4.0"

[tool.poetry.scripts]
start = "LR1.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
