[tool.poetry]
name = "videokivy"
version = "0.1.0"
description = ""
authors = ["egorvasilkov <valoshka2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kivy = "^2.1.0"
kivymd = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
